# web-whiteboard

./: .gitignore  Cargo.toml  LICENSE_MIT  index.html  package.json
src/: lib.rs
