[package]
name = "web-whiteboard"
version = "0.1.0"
authors = ["Choi-Jungwoo <jungwoo@cineuse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"

[profile.release]
opt-level = "s"

[dependencies.web-sys]
version = "0.3"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
]
